5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1613_2426.log
== SUBMITION (2019-04-04 19:09:01) 
-- CODE:
tempo_gasto = float(input("digite o tempo gasto: "))
velocidade = float(input("digite a velocidade: "))
distancia = velocidade * tempo
quantidade_litros = distancia / 12
print(distancia)
print(quantidade_litros)





-- EXECUTION TIME:
0.207654
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/2426/main.py", line 3, in <module>
    distancia = velocidade * tempo
NameError: name 'tempo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:09:10) 
-- CODE:
tempo_gasto = float(input("digite o tempo gasto: "))
velocidade = float(input("digite a velocidade: "))
distancia = velocidade * tempo
quantidade_litros = distancia / 12
print(distancia)
print(quantidade_litros)





-- EXECUTION TIME:
0.160235
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/2426/main.py", line 3, in <module>
    distancia = velocidade * tempo
NameError: name 'tempo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:09:12) 
-- CODE:
tempo_gasto = float(input("digite o tempo gasto: "))
velocidade = float(input("digite a velocidade: "))
distancia = velocidade * tempo
quantidade_litros = distancia / 12
print(distancia)
print(quantidade_litros)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    distancia = velocidade * tempo
NameError: name 'tempo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:09:43) 
-- CODE:
tempo_gasto = float(input("digite o tempo gasto: "))
velocidade = float(input("digite a velocidade: "))
distancia = velocidade * tempo_gasto
quantidade_litros = distancia / 12
print(distancia)
print(quantidade_litros)





-- EXECUTION TIME:
0.234186
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
